@@ -18,12 +18,15 @@ Doc: let \var{bnr} be the ray class group data output by
  generators in \kbd{bnr.bnf.gen} and \kbd{bnr.bid.gen}) and compute with
  respect to them.
 
- If $\fl = 1$ (default), returns a 2-component vector $v$ where $v[1]$ is the
- vector of components of $x$ on the ray class group generators, $v[2]$ is
- an element $\alpha$ congruent to $1~\text{mod}^* f$ such that
- $x = \alpha \prod_i g_i^{x_i}$.
+ The binary digits of $\fl$ (default $\fl = 1) mean:
 
- If $\fl=0$, outputs only $v_1$.
+ \item $1$: If set returns a 2-component vector $[e,\alpha]$ where $e$
+ is the vector of components of $x$ on the ray class group generators,
+ $\alpha$ is an element congruent to $1~\text{mod}^* f$ such that
+ $x = \alpha \prod_i g_i^{e_i}$. If unset, returns only $e$.
+
+ \item $4$: If set, returns $[e,\alpha]$ where $\alpha$ is given in factored
+ form (compact representation). This is orders of magnitude faster.
 
  \bprog
  ? K = bnfinit(x^2 - 30); bnr = bnrinit(K, [4, [1,1]]);
