@@ -98,8 +98,10 @@
 [2, 2, 1]~
 2
 2
+[[3, 0, 0]~, [3, 2; [1, 0]~, 1]]
 [[3, 0, 0]~, 9]
 [3, 0, 0]~
+[[3, 0, 0]~, [3, 1; 35, -1; 3675, -1; 1/3, 1; [1, 0]~, 1]]
 [[3, 0, 0]~, 1/128625]
 [3, 0, 0]~
-Total time spent: 370
+Total time spent: 326
